CHANGES IN VERSION 1.6.1
-------------------------
    o Fixing quantile filtering defaults (#28)
        o Require min expression in 5% instead of 95% of the samples
        o Require min expression on both sides of the junction
    o Align FRASER package with DROP pipeline (#24)
    o Improve visualizations and Improve documentation
    o Improve internal object validation
    o Minor bugfixes

CHANGES IN VERSION 1.2.1
    o Add merging of external counts
    o Add publication
    o Minor bugfixes 
    
CHANGES IN VERSION 1.1.6
-------------------------
    o Use proper S3/S4 methods to share functions between packages
    o Minor API changes due to S3/S4 changes (e.g fds -> object)
    o Switch from psiSite to theta
    o Improved documentation
    o Minor bugfixes

CHANGES IN VERSION 1.1.3
-------------------------

    o Update and adjust injectOutlier and hyperParameter functions
    o Option to compute z scores in logit space or not
    o Add cap value [0.01,0.99] to logit function
    o Use pairedEnd counting with Rsubread
    o Correct assayName pajd -> padj
    o Minor bugfixes

CHANGES IN VERSION 1.1.2
-------------------------

    o Option to consider only the standard chromosomes in the counting
    o Option to include additional columns from mcols(fds) in the result table
    o Annotation of junctions with corresponding gene names/ids now produces 
      an additional column in mcols(fds) that contains further gene names/ids 
      if the junction overlaps with multiple genes
    o Minor bugfixes 

CHANGES IN VERSION 1.1.1
-------------------------

    o Bugfix correcting the strand specific counting for paired-end reads

CHANGES IN VERSION 0.99.1
-------------------------

    o Introduction of the shinyApp

CHANGES IN VERSION 0.99.0
-------------------------

    o This is the initial setup of the FRASER package.
    o Use SummarizedExperiment as superclass
    o Integrate package into the Bioconductor infrastructure