@@ -114,7 +114,7 @@ globalVariables(c(".", "J", ".N", ".asDataFrame", "End", "first_feature",
         "FN", "HTML", "other_features", "Start", 
         "TP", "deltaPsi", "curgr", "gene", "lty", "hgnc_symbol", "id",
         "ldat", "mapped", "p.adj", "pval", "pValue", "sampleID", "sampleGroup", 
-        "chr", 
+        "chr", "isOptimalQ",
         "symbol", "type", "pseudocount", "known_intron", "known_start", 
         "known_end", "..columns2Write", "maxVal", "idxGroup", "idxInCount", 
         "idxInGroup", "lower", "nOk", "nPerGroup", "nsubset", "obs", "p", 
