@@ -302,9 +302,7 @@ getSplitReadCountsForAllSamples <- function(fds, NcpuPerSample=1,
     rowRanges(counts) <- annotateSpliceSite(rowRanges(counts))
     
     # save summarized experiment
-    if(!dir.exists(outDir)){
-        dir.create(outDir, recursive=TRUE)
-    }
+    checkForAndCreateDir(NA, outDir)
     message(date(), ": Writing split counts to folder: ", outDir)
     saveHDF5SummarizedExperiment(counts, dir=outDir, replace=TRUE)
     
@@ -384,9 +382,7 @@ getNonSplitReadCountsForAllSamples <- function(fds, splitCountRanges,
                                 spliceSiteCoords=spliceSiteCoords )
     
     # save summarized experiment
-    if(!dir.exists(outDir)){
-        dir.create(outDir, recursive=TRUE)
-    }
+    checkForAndCreateDir(NA, outDir)
     message(date(), ": Writing non-split counts to folder: ", outDir)
     saveHDF5SummarizedExperiment(siteCounts, dir=outDir, replace=TRUE)
     
@@ -447,9 +443,7 @@ getSplitCountCacheFile <- function(sampleID, settings){
     
     # cache folder
     cachedir <- file.path(workingDir(settings), "cache", "splitCounts")
-    if(!dir.exists(cachedir)){
-        dir.create(cachedir, recursive=TRUE)
-    }
+    checkForAndCreateDir(NA, cachedir)
     
     # file name
     filename <- paste0("splitCounts-", sampleID, ".RDS")
@@ -816,9 +810,7 @@ getNonSplicedCountCacheFolder <- function(settings){
     # cache folder
     cachedir <- file.path(workingDir(settings), "cache", "nonSplicedCounts", 
                             nameNoSpace(name(settings)))
-    if(!dir.exists(cachedir)){
-        dir.create(cachedir, recursive=TRUE)
-    }
+    checkForAndCreateDir(NA, cachedir)
     
     # return it
     return(cachedir)
@@ -1107,9 +1099,7 @@ setMaxThreads <- function(BPPARAM, maxWorkers=bpworkers(BPPARAM),
 #' writes a GRanges object with the counts as a tsv (or tsv.gz) file.
 #' @noRd
 writeCountsToTsv <- function(counts, file="counts.tsv.gz"){
-    if(!dir.exists(dirname(file))){
-        dir.create(dirname(file), recursive=TRUE)
-    }
+    checkForAndCreateDir(NA, dirname(file))
     message(date(), ": Writing counts to file: ", file)
     fwrite(as.data.table(counts), file=file, sep = "\t")
 }
