@@ -4,6 +4,7 @@ CHANGES IN VERSION 1.6.1
         o Require min expression in 5% instead of 95% of the samples
         o Require min expression on both sides of the junction
     o Align FRASER package with DROP pipeline (#24)
+    o Move temp directory from tempdir() to working directory getwd()
     o Improve visualizations and Improve documentation
     o Improve internal object validation
     o Minor bugfixes
